# documentation-helper

./: .env.example  .gitignore  README.md  config.py  config.yaml  pyproject.toml
src/: forest-portal-helper.py
src/forest_portal_helper/: cli.py
src/forest_portal_helper/core/: chunking.py  config.py  docgen.py  fs_scanner.py  imports_index.py  interactive,py  logging_utils.py  manifest.py  output_layout.py  prompting.py  text_utils.py
src/forest_portal_helper/llm/: groq_client.py  rate_limiter.py  router.py
src/forest_portal_helper/templates/: doc_prompt.md
templates/: doc_prompt.md
